cambio tamaño slide

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                         vel
                         ad dolorum ratione dolor!</p>
                 </div>
-                
+
                 <!-- slide -->
                 <div id="myCarousel" class="carousel slide container" data-bs-ride="carousel">
                     <!-- carousel -->
                     <div class="carousel-inner w-100">
                         <!-- item 1 -->
                         <div class="carousel-item  active">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7 container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
@@ -53,7 +53,7 @@
                         <!-- /item 1 -->
                         <!-- item 2 -->
                         <div class="carousel-item ">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
@@ -67,7 +67,7 @@
                         <!-- /item 2 -->
                         <!-- item 3-->
                         <div class="carousel-item">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
@@ -81,7 +81,7 @@
                         <!-- /item 3-->
                         <!-- item 4 -->
                         <div class="carousel-item">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
@@ -95,7 +95,7 @@
                         <!-- /item 4 -->
                         <!-- item 5 -->
                         <div class="carousel-item ">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
@@ -109,7 +109,7 @@
                         <!-- /item 5 -->
                         <!-- item 6 -->
                         <div class="carousel-item ">
-                            <div class="col-6 col-xl-7  container-card">
+                            <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
                                     <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
