--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <section class="e-shop">
+    <section class="e-shop container">
         <div class="row">
             <div class="e-shop-container">
                 <!-- Texto -->
