--- a/index.html
+++ b/index.html
@@ -14,25 +14,19 @@
             </article>
         </div>
 
-
-
             
             <article>
-                <header class="Titulos_notas_secundarias tipo_titulo"><h1>Preparando los señuelos para esta nueva temporada de tarariras</h1></header> 
-                <p class="Titulos_notas_secundarias">Conlos primeros calores empieza a calentar el agua y ellas a activarse: ¿se viene con todo la temporada de taruchas (hopliasmalabaricus)?</p>
-                <img class="imagenes_sub_notas" src="file:///C:/Users/Marco/Desktop/PROYECTO%20INTEGRADOR%20FINAL/ProyectoFullstack/Desarrollo_HTML/imagenes/se%C3%B1uelo.png"
+                <header class="Titulos_notas_secundarias tipo_titulo"><h1>Relatos a cielo abierto: Volver al origen</h1></header> 
+                <p class="Titulos_notas_secundarias">Un texto de Daniel Vadillo enumera los pasos que sigue un pescador novel, y de corta edad, por los diferentes peces, equipos y carnadas hasta alcanzar la primera presa.</p>
+                <img class="imagenes_sub_notas" src="C:\Users\Marco\Desktop\PROYECTO INTEGRADOR FINAL\ProyectoFullstack\Desarrollo_HTML\imagenes\niño.jpg"
             </article>
             <article>
-                <header class="Titulos_notas_secundarias tipo_titulo"><h2>Preparando los señuelos para esta nueva temporada de tarariras</h2></header> 
-                <p class="Titulos_notas_secundarias">Conlos primeros calores empieza a calentar el agua y ellas a activarse: ¿se viene con todo la temporada de taruchas (hopliasmalabaricus)?</p>
-                <img class="imagenes_sub_notas" src="file:///C:/Users/Marco/Desktop/PROYECTO%20INTEGRADOR%20FINAL/ProyectoFullstack/Desarrollo_HTML/imagenes/se%C3%B1uelo.png"
+                <header class="Titulos_notas_secundarias tipo_titulo"><h2>Fin de semana XXL con mucha pesca</h2></header> 
+                <p class="Titulos_notas_secundarias">Los feriados nos dan la posibilidad de disfrutar de muchas salidas con familia o amigos. Más de 150 pesqueros que son opción para tu próximo viaje de pesca y una grilla completa de eventos que se vienen en el país.</p>
+                <img class="imagenes_sub_notas" src="file:///C:/Users/Marco/Desktop/PROYECTO%20INTEGRADOR%20FINAL/ProyectoFullstack/Desarrollo_HTML/imagenes/pez.jpg"
             </article>
     
       </div>
    
-
-
-
-
 </body>
 </html>
