--- a/login-registro.html
+++ b/login-registro.html
@@ -14,8 +14,7 @@
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Hojas de estilo -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" type="text/css" href="css/login.css">
 
 </head>
 
