--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 </div>
 
                 <!-- slide -->
-                <div id="myCarousel" class="carousel slide container" data-bs-ride="carousel">
+                <div id="myCarousel" class="carousel slide " data-bs-ride="carousel">
                     <!-- carousel -->
                     <div class="carousel-inner w-100">
                         <!-- item 1 -->
                         <div class="carousel-item  active">
                             <div class="col-7 container-card">
-                                <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
-                                    <div class="card-img-overlay">
+                                <div class="card text-bg-dark ">
+                                    <img src="images/slide-1.jpg" class="card-img" alt="...">
+                                    <div class="card-img-overlay ">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
                                             lead-in to additional content. This content is a little bit longer.</p>
@@ -55,7 +55,7 @@
                         <div class="carousel-item ">
                             <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
+                                    <img src="images/slide-2.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
@@ -69,7 +69,7 @@
                         <div class="carousel-item">
                             <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
+                                    <img src="images/slide-3.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
@@ -83,7 +83,7 @@
                         <div class="carousel-item">
                             <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
+                                    <img src="images/slide-4.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
@@ -97,7 +97,7 @@
                         <div class="carousel-item ">
                             <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
+                                    <img src="images/slide-5.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
@@ -111,7 +111,7 @@
                         <div class="carousel-item ">
                             <div class="col-7  container-card">
                                 <div class="card text-bg-dark">
-                                    <img src="images/accesorios-pesca.jpg" class="card-img" alt="...">
+                                    <img src="images/slide-6.jpg" class="card-img" alt="...">
                                     <div class="card-img-overlay">
                                         <h5 class="card-title">Pesca Deportiva</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a natural
