vincular boton con html reset

--- a/login-registro.html
+++ b/login-registro.html
@@ -52,7 +52,7 @@
                           <i class="input-icon bi bi-key"></i>
                         </div>
                         <a href="/index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
-                        <p class="mb-0 mt-4 text-center"><a href="#0" class="link">¿Olvidaste tu constraseña?</a></p>
+                        <p class="mb-0 mt-4 text-center"><a href="/reset-password.html" class="link">¿Olvidaste tu constraseña?</a></p>
                       </div>
                     </div>
                   </div>
