--- a/login-registro.html
+++ b/login-registro.html
@@ -26,7 +26,7 @@
       <img src="images/El-anzuelo_logo.png" alt="">
     </a>
 
-<!-- Form -->
+    <!-- Form -->
     <div class="section">
       <div class="container">
         <div class="row full-height justify-content-center">
@@ -47,12 +47,13 @@
                           <i class="input-icon bi bi-person-circle"></i>
                         </div>
                         <div class="form-group mt-2">
-                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña"
-                            id="logpass" required>
+                          <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass"
+                            required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
                         <a href="/index.html"><button class="btn mt-4"><span>Ingresar</span></button></a>
-                        <p class="mb-0 mt-4 text-center"><a href="/reset-password.html" class="link">¿Olvidaste tu constraseña?</a></p>
+                        <p class="mb-0 mt-4 text-center"><a href="/reset-password.html" class="link">¿Olvidaste tu
+                            constraseña?</a></p>
                       </div>
                     </div>
                   </div>
@@ -67,7 +68,8 @@
                           <i class="input-icon bi-person-circle"></i>
                         </div>
                         <div class="form-group mt-2">
-                          <input type="text" name="sign-apellido" class="form-style" placeholder="Apellido" id="sign-apellido" required>
+                          <input type="text" name="sign-apellido" class="form-style" placeholder="Apellido"
+                            id="sign-apellido" required>
                           <i class="input-icon bi-person-circle"></i>
                         </div>
                         <div class="form-group mt-2">
@@ -78,7 +80,7 @@
                         <div class="form-group mt-2">
                           <input type="password" name="sign-pass" class="form-style" placeholder="Contraseña"
                             id="sign-pass" autocomplete="off" required>
-                          <i class="input-icon bi bi-key" ></i>
+                          <i class="input-icon bi bi-key"></i>
                         </div>
                         <a href="#">
                           <button class="mt-4 btn"><span>Registrarse</span></button> </a>
@@ -93,7 +95,7 @@
       </div>
     </div>
     <!--Waves Container-->
-    
+
     <div>
       <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
         viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
@@ -108,11 +110,15 @@
         </g>
       </svg>
     </div>
-  
+
     <!--Waves end-->
   </div>
   <!--Login ends-->
 
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
