--- a/login-registro.html
+++ b/login-registro.html
@@ -14,6 +14,8 @@
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Hojas de estilo -->
+  <!-- normalize -->
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/login.css">
 
 </head>
