Modificar rutas de links

--- a/checkout.html
+++ b/checkout.html
@@ -37,7 +37,7 @@
             <a class="nav-link active" href="#"><i class="bi bi-person-circle me-2"></i>Datos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/envio.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
+            <a class="nav-link" href="/shipping.html"><i class="bi bi-box-seam me-2"></i>Envio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="bi bi-credit-card me-2"></i>Pago</a>
@@ -86,7 +86,7 @@
           </div>
         </div>
 
-        <a href="/envio.html">
+        <a href="/shipping.html">
           <button class="btn-cont"> Continuar
             <div class="icon">
               <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
