corrección de footer para fusión

--- a/index.html
+++ b/index.html
@@ -1,32 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footer - Design for MagtimusPro</title>
+   
 
-    <link rel="stylesheet" href="CSS/Estilos.css">
+    <link rel="stylesheet" href="css/footer.css">
 
+    <!--ICONOS-FOOTER- header-->
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <Header>
+   
+    
 
-    </Header>
-    <div class="body__Page">
-        <div class="cover"></div>
-        <div class="container__article">
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-            <div class="box__article"></div>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer>
 
@@ -67,7 +87,7 @@
 
         <div class="box__copyright">
             <hr>
-            <p>Todos los derechos reservados © 2021 <b>MagtimusPro</b></p>
+            <p></b></p>
         </div>
     </footer>
 
