--- a/ProyectoFullStackElAnzuelo/index.html
+++ b/ProyectoFullStackElAnzuelo/index.html
@@ -11,7 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <!-- Rutas-->
-    <link rel="stylesheet" href="./style.css">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- propias-header -->
+    <link rel="stylesheet" href="./css/styles.css">
+    <!-- header -->
+    <link rel="stylesheet" href="./css/header.css">
     <link rel="shortcut icon" href="./img/Logo.png" type="image/x-icon" /> 
 </head>
 
@@ -106,8 +111,7 @@
 
 
         <!--Direccion Boostrap js-->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js" ></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
