--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -28,7 +27,7 @@
   <!-- Encabezado Header -->
     <header>
       <a ref="#" class="logo">
-        <img src="./img/El-anzuelo_logo.png" alt="logo de la tienda">  
+        <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de la tienda">  
       </a>
       <div>
         
@@ -64,21 +63,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/img11.jpg" class="d-block w-100" alt="...">
+              <img src="./images/header/img11.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>First slide label</h5>
                 <p>Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/img22.jpg" class="d-block w-100" alt="...">
+              <img src="./images/header/img22.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Second slide label</h5>
                 <p>Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/img33.jpg" class="d-block w-100" alt="...">
+              <img src="./images/header/img33.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Third slide label</h5>
                 <p>Some representative placeholder content for the third slide.</p>
