--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="container__footer">
             <div class="box__footer">
                 <div class="logo">
-                    <img src="Images/logo-magtimus.png" alt="">
+                    <img src="images/identidad/El-anzuelo-logo.png" alt="">
                 </div>
                 <div class="terms">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit cum cumque velit libero officiis quam doloremque reprehenderit quae corporis! Delectus architecto officia praesentium atque laudantium, nam deleniti sapiente deserunt.</p>
