agregar margin-top

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
  <!-- SECCION CLIMA - CALENDARIOS 
   ================================================== -->
 
-    <div class="container clima-calendario d-flex flex-column align-items-center ">
+    <div class="container clima-calendario d-flex flex-column align-items-center mt-5">
 
         <!-- Three columns of text below the carousel -->
 
