--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
   
    <div class="col-md-6  rounded  container text-center bg-info p-5 mt-4 ml-10 mr-10">
         <h3 class="headline back text-white">REGISTRATE A NUESTRO NEWSLETTER</h3>
-       <form class="main-form " method="post" action="/bienvenida/Landing/Signup"> 
-        <input  id="email" class=" width" name="email" type="text" placeholder="Introduzca su e-mail"/>
+       <form class="main-form " method="post" action="./"> 
+        <input  id="email" class="width" name="email" type="text" placeholder="Introduzca su e-mail"/>
          <button type="button" class="btn btn-more btn-outline-secondary btn-lg">REGISTRARSE</button> 
      </form>  
     </div>  
