cambio nombre de sección

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="e-shop-container">
                 <!-- Texto -->
                 <div class="e-shop__text col-md-6">
-                    <h2 class="e-shop__text__title">sección: e-shop</h2>
+                    <h2 class="e-shop__text__title">E-shop</h2>
                     <p class="e-shop__text__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea
                         pariatur
                         quas modi ex molestiae quia dolore consequuntur illum molestias saepe quam vero, quis suscipit aut
