--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 
 <body>
-
+<!-- SECCIÓN E-SHOP 
+==================================================================== -->
     <section class="e-shop container">
         <div class="row">
             <div class="e-shop-container">
