--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </div>
     <div class="cajas">
       
-             <img src="imagenes/foroimgg.jpg" alt="foro" tittle="FORO">
+             <img src="images/foroimgg.jpg" alt="foro" tittle="FORO">
      
      </div>
     </div>
