--- a/blog.html
+++ b/blog.html
@@ -237,6 +237,48 @@
         </div>
     </section>
 
+    <footer>
+      <div class="container__footer">
+        <div class="box__footer">
+          <div class="logo">
+            <img src="images/identidad/El-anzuelo-logo.png" alt="">
+          </div>
+          <div class="terms">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit cum cumque velit libero officiis
+              quam doloremque reprehenderit quae corporis! Delectus architecto officia praesentium atque laudantium, nam
+              deleniti sapiente deserunt.</p>
+          </div>
+        </div>
+        <div class="box__footer">
+          <h2>Soluciones</h2>
+          <a href="https://www.google.com">App Desarrollo</a>
+          <a href="#">App Marketing</a>
+          <a href="#">IOS Desarrollo</a>
+          <a href="#">Android Desarrollo</a>
+        </div>
+  
+        <div class="box__footer">
+          <h2>Compañia</h2>
+          <a href="#">Acerca de</a>
+          <a href="#">Trabajos</a>
+          <a href="#">Procesos</a>
+          <a href="#">Servicios</a>
+        </div>
+  
+        <div class="box__footer">
+          <h2>Redes Sociales</h2>
+          <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+          <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+          <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+          <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+        </div>
+  
+      </div>
+      <div class="box__copyright">
+        <hr>
+        <p></b></p>
+      </div>
+    </footer>
 
 <!-- Script BOOTSTRAP -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>  
