Cambio de rutas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
+  <link rel="shortcut icon" href="./images/El anzuelo-icono.png" type="image/png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,17 +51,16 @@
   <!-- Header -->
   <header>
     <a ref="index.html" class="logo">
-      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de la tienda">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
     </a>
     <div>
-
+      
       <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
       <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
-      <a href="login.html">
+      <a href="login-registro.html">
         <button class="btn-more"><span>Ingresar</span></button>
       </a>
-
     </div>
   </header>
   <!-- NAV MENU -->
@@ -71,7 +71,7 @@
         <li><a href="#">CALENDARIO</a></li>
         <li><a href="#">E-SHOP</a></li>
         <li><a href="#">FORO</a></li>
-        <li><a href="#">BLOG</a></li>
+        <li><a href="blog.html">BLOG</a></li>
         <li><a href="#">CONTACTO</a></li>
       </ul>
     </div>
