--- a/login-registro.html
+++ b/login-registro.html
@@ -84,7 +84,7 @@
                             id="sign-pass" autocomplete="off" required>
                           <i class="input-icon bi bi-key"></i>
                         </div>
-                        <a href="#">
+                        <a href="login-registro.html">
                           <button class="mt-4 btn"><span>Registrarse</span></button> </a>
                       </div>
                     </div>
