--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
   <!-- normalize -->
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <!-- Estilos Header -->
@@ -54,7 +55,6 @@
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
     </a>
     <div>
-      
       <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
       <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
@@ -451,13 +451,14 @@
   <footer>
     <div class="container__footer">
       <div class="box__footer">
-        <div class="logo">
+        <div class="logo-footer">
           <img src="images/identidad/El-anzuelo-logo.png" alt="">
         </div>
-        <div class="terms">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit cum cumque velit libero officiis
-            quam doloremque reprehenderit quae corporis! Delectus architecto officia praesentium atque laudantium, nam
-            deleniti sapiente deserunt.</p>
+        <div class="subscribe-footer">
+          <div class="group-subs">
+            <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email" autocomplete="off">
+            <input class="button--submit" value="Subscribite" type="submit">
+        </div>
         </div>
       </div>
       <div class="box__footer">
@@ -487,7 +488,7 @@
     </div>
     <div class="box__copyright">
       <hr>
-      <p></b></p>
+      <p></b>El anzuelo</p>
     </div>
   </footer>
 
