Cambio rutas de imágenes

--- a/login-registro.html
+++ b/login-registro.html
@@ -25,7 +25,7 @@
   <div class="container-login">
     <!-- Logo -->
     <a href="index.html" class="logo" target="_blank">
-      <img src="images/El-anzuelo_logo.png" alt="">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo el anzuelo">
     </a>
 
     <!-- Form -->
