--- a/payment.html
+++ b/payment.html
@@ -120,7 +120,7 @@
                             <div class="row">
                                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                     <div class="image ">
-                                        <img class="w-100" src="images/El-anzuelo_logo.png">
+                                        <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -163,7 +163,7 @@
                             <div class="row">
                                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                     <div class="image ">
-                                        <img class="w-100" src="images/El-anzuelo_logo.png">
+                                        <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -206,7 +206,7 @@
                             <div class="row">
                                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                                     <div class="image ">
-                                        <img class="w-100" src="images/El-anzuelo_logo.png">
+                                        <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
