--- a/reset-password.html
+++ b/reset-password.html
@@ -26,7 +26,7 @@
   <div class="container-login">
     <!-- Logo -->
     <a href="index.html" class="logo" target="_blank">
-      <img src="images/El-anzuelo_logo.png" alt="">
+      <img src="images/identidad/El-anzuelo-logo.png" alt="">
     </a>
 
 <!-- Form reset password -->
