--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
-  <link rel="shortcut icon" href="./images/El anzuelo-icono.png" type="image/png">
+  <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -238,7 +238,7 @@
             <div class="carousel-item carousel-item-shop  active">
               <div class="col-7 container-card">
                 <div class="card text-bg-dark ">
-                  <img src="images/slide-1.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-1.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay ">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
@@ -252,7 +252,7 @@
             <div class="carousel-item carousel-item-shop ">
               <div class="col-7  container-card">
                 <div class="card text-bg-dark">
-                  <img src="images/slide-2.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-2.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
@@ -266,7 +266,7 @@
             <div class="carousel-item carousel-item-shop">
               <div class="col-7  container-card">
                 <div class="card text-bg-dark">
-                  <img src="images/slide-3.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-3.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
@@ -280,7 +280,7 @@
             <div class="carousel-item carousel-item-shop">
               <div class="col-7  container-card">
                 <div class="card text-bg-dark">
-                  <img src="images/slide-4.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-4.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
@@ -294,7 +294,7 @@
             <div class="carousel-item  carousel-item-shop">
               <div class="col-7  container-card">
                 <div class="card text-bg-dark">
-                  <img src="images/slide-5.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-5.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
@@ -308,7 +308,7 @@
             <div class="carousel-item carousel-item-shop">
               <div class="col-7  container-card">
                 <div class="card text-bg-dark">
-                  <img src="images/slide-6.jpg" class="card-img" alt="...">
+                  <img src="images/shop/home/slide-6.jpg" class="card-img" alt="...">
                   <div class="card-img-overlay">
                     <h5 class="card-title">Pesca Deportiva</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural
