--- a/shipping.html
+++ b/shipping.html
@@ -89,7 +89,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                   <div class="image ">
-                    <img class="w-100" src="images/El-anzuelo_logo.png">
+                    <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -132,7 +132,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                   <div class="image ">
-                    <img class="w-100" src="images/El-anzuelo_logo.png">
+                    <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
@@ -175,7 +175,7 @@
               <div class="row">
                 <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                   <div class="image ">
-                    <img class="w-100" src="images/El-anzuelo_logo.png">
+                    <img class="w-100" src="images/identidad/El-anzuelo-logo.png">
                   </div>
                 </div>
                 <div class="col-md-6 col-lg-5 col-xl-6 ms-4">
