Add footer and header

--- a/checkout.html
+++ b/checkout.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <!-- Header -->
   <link rel="stylesheet" type="text/css" href="css/header.css">
+  <!-- footer -->
+  <link rel="stylesheet" type="text/css" href="css/footer.css">
   <!-- propia -->
   <link rel="stylesheet" type="text/css" href="css/checkout.css">
 
@@ -272,7 +274,49 @@
 
   <!-- e-Shop ends -->
   <!-- Footer -->
+  <footer>
+    <div class="container__footer">
+      <div class="box__footer">
+        <div class="logo-footer">
+          <img src="images/identidad/El-anzuelo-logo.png" alt="">
+        </div>
+        <div class="subscribe-footer">
+          <div class="group-subs">
+            <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email" autocomplete="off">
+            <input class="button--submit" value="Subscribite" type="submit">
+        </div>
+        </div>
+      </div>
+      <div class="box__footer">
+        <h2>Soluciones</h2>
+        <a href="https://www.google.com">App Desarrollo</a>
+        <a href="#">App Marketing</a>
+        <a href="#">IOS Desarrollo</a>
+        <a href="#">Android Desarrollo</a>
+      </div>
 
+      <div class="box__footer">
+        <h2>Compañia</h2>
+        <a href="#">Acerca de</a>
+        <a href="#">Trabajos</a>
+        <a href="#">Procesos</a>
+        <a href="#">Servicios</a>
+      </div>
+
+      <div class="box__footer">
+        <h2>Redes Sociales</h2>
+        <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+        <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+        <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+      </div>
+
+    </div>
+    <div class="box__copyright">
+      <hr>
+      <p></b>El anzuelo</p>
+    </div>
+  </footer>
 
   <!-- Footer ends -->
 
