--- a/checkout.html
+++ b/checkout.html
@@ -7,15 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
   <!-- Icono de la pestaña -->
-  <link rel="icon" type="image/png" href="images/El anzuelo-icono.png">
+  <link rel="icon" type="image/png" href="images/identidad/El-anzuelo-icono.png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Hojas de estilo -->
-  <!-- normalize -->
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <!-- Header -->
   <link rel="stylesheet" type="text/css" href="css/header.css">
   <!-- footer -->
