--- a/shipping.html
+++ b/shipping.html
@@ -7,15 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>El Anzuelo</title>
   <!-- Icono de la pestaña -->
-  <link rel="icon" type="image/png" href="images/El anzuelo-icono.png">
+  <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Hojas de estilo -->
-  <!-- normalize -->
-  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <!-- Header -->
+  <link rel="stylesheet" type="text/css" href="css/header.css">
+  <!-- Footer -->
+  <link rel="stylesheet" type="text/css" href="css/footer.css">
   <!-- propia -->
   <link rel="stylesheet" type="text/css" href="css/shipping.css">
 
@@ -23,7 +25,32 @@
 
 <body>
   <!-- Header -->
+  <header>
+    <a ref="index.html" class="logo">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+    </a>
+    <div>
+      <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
+      <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
+      <a href="login-registro.html">
+        <button class="btn-more"><span>Ingresar</span></button>
+      </a>
+    </div>
+  </header>
+  <!-- NAV MENU -->
+  <nav class="menu-nav">
+    <div id="menu">
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="#">CALENDARIO</a></li>
+        <li><a href="#">E-SHOP</a></li>
+        <li><a href="#">FORO</a></li>
+        <li><a href="blog.html">BLOG</a></li>
+        <li><a href="#">CONTACTO</a></li>
+      </ul>
+    </div>
+  </nav>
 
   <!-- Header ends -->
   <!-- e-Shop - detalle de envío -->
@@ -60,7 +87,7 @@
             </ul>
           </div>
         </div>
-        
+
         <a href="/payment.html">
           <button class="btn-cont"> Continuar
             <div class="icon">
@@ -220,7 +247,50 @@
 
   <!-- e-Shop ends -->
   <!-- Footer -->
+  <footer>
+    <div class="container__footer">
+      <div class="box__footer">
+        <div class="logo-footer">
+          <img src="images/identidad/El-anzuelo-logo.png" alt="">
+        </div>
+        <div class="subscribe-footer">
+          <div class="group-subs">
+            <input type="email" class="input subscribe-footer__input" id="Email" name="Email" placeholder="Email"
+              autocomplete="off">
+            <input class="button--submit" value="Subscribite" type="submit">
+          </div>
+        </div>
+      </div>
+      <div class="box__footer">
+        <h2>Soluciones</h2>
+        <a href="https://www.google.com">App Desarrollo</a>
+        <a href="#">App Marketing</a>
+        <a href="#">IOS Desarrollo</a>
+        <a href="#">Android Desarrollo</a>
+      </div>
 
+      <div class="box__footer">
+        <h2>Compañia</h2>
+        <a href="#">Acerca de</a>
+        <a href="#">Trabajos</a>
+        <a href="#">Procesos</a>
+        <a href="#">Servicios</a>
+      </div>
+
+      <div class="box__footer">
+        <h2>Redes Sociales</h2>
+        <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+        <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+        <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+        <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+      </div>
+
+    </div>
+    <div class="box__copyright">
+      <hr>
+      <p></b>El anzuelo</p>
+    </div>
+  </footer>
 
   <!-- Footer ends -->
 
