--- a/shipping.html
+++ b/shipping.html
@@ -11,6 +11,8 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- Iconos -->
+  <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
   <!-- Bootstrap icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <!-- Hojas de estilo -->
@@ -56,7 +58,7 @@
   <!-- e-Shop - detalle de envío -->
 
   <div class="checkout-container">
-    <div class="form col-5">
+    <div class="form col-6">
       <div class="p-3 p-lg-5  form-container">
         <!-- navlink -->
         <ul class="nav nav-pills mb-3 nav-justified">
