arreglar slide shop

--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
 
   <!-- SECCIÓN E-SHOP 
 ==================================================================== -->
-  <section class="e-shop container">
-    <div class="row">
+  <section class="e-shop">
       <div class="e-shop-container">
         <!-- Texto -->
         <div class="e-shop__text col-md-6">
@@ -341,7 +340,7 @@
 
 
 
-    </div>
+
   </section>
 
 
