nav + calendario menu

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="menu">
       <ul>
         <li><a href="index.html">HOME</a></li>
-        <li><a href="#">CALENDARIO</a></li>
+        <li><a href="calendarios.html">CALENDARIO</a></li>
         <li><a href="#">E-SHOP</a></li>
         <li><a href="#">FORO</a></li>
         <li><a href="blog.html">BLOG</a></li>
