correcion <a ref="login-registro.html">
se agrego una "H" antes de ref

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <!-- Header -->
   <header>
-    <a ref="index.html" class="logo">
+    <a href="index.html" class="logo">
       <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
     </a>
     <div>
