--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 
   <!-- Header -->
   <header>
-    <a ref="index.html" class="logo">
-      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+    <a href="index.html" class="logo">
+      <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo" href="index.html">
+     
     </a>
     <div>
       <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
