--- a/cart.html
+++ b/cart.html
@@ -42,14 +42,14 @@
 </head>
 
 <body>
-    <div class="checkout-container">
-        <div class="form  checkout-container__form col-12 d-flex">
+    <div class="cart-container">
+        <div class="col-12 d-flex justify-content-center ">
             
         <!-- Carrito -->
         <div class="carrito-container col-5 mt-5  pt-2">
           <div class="row justify-content-center mb-3">
             <div class="col-md-12 col-xl-10">
-              <h5> Tu carrito</h5>
+              <h4 class="text-primary"> Tu carrito</h4>
               <div class="card shadow-0 border rounded-3">
                 <div class="card-body">
                   <div class="row">
@@ -178,7 +178,7 @@
           </div>
         </div>
         <!-- Resumen -->
-        <div class="col-md-5 col-lg-4 ">
+        <div class="col-md-5 col-lg-4 mt-5  pt-2">
             <h4 class="d-flex justify-content-between align-items-center">
               <span class="text-primary">Resumen del pedido</span>
             </h4>
