--- a/product.html
+++ b/product.html
@@ -24,28 +24,173 @@
 
 
     <!DOCTYPE html>
-<html lang="es">
+    <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Anzuelo</title>
-    <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>El Anzuelo</title>
+        <link rel="shortcut icon" href="./images/identidad/El-anzuelo-icono.png" type="image/png">
+        <!-- Bootstrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <!-- Iconos -->
-    <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <!-- Propia -->
-    <link rel="stylesheet" type="text/css" href="product.html">
-</head>
+        <!-- Iconos -->
+        <script src="https://kit.fontawesome.com/f570856479.js" crossorigin="anonymous"></script>
+        <!-- Bootstrap icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+        <!-- Header -->
+        <link rel="stylesheet" type="text/css" href="./css/header.css">
+        <!-- Footer -->
+        <link rel="stylesheet" type="text/css" href="./css/footer.css">
+        <!-- Propia -->
+        <link rel="stylesheet" type="text/css" href="./css/product.css">
+    </head>
 
-<body>
-   
-</body>
+    <body>
+        <!-- Header -->
+        <header>
+            <a ref="index.html" class="logo">
+                <img src="./images/identidad/El-anzuelo-logo.png" alt="logo de el anzuelo">
+            </a>
+            <div>
+                <input type="search" class="menu__search-input" placeholder="¿Qué deseas buscar?">
+                <i class="fa-solid fa-magnifying-glass menu__search-icon"></i>
 
-</html>
+                <a href="login-registro.html">
+                    <button class="btn-more"><span>Ingresar</span></button>
+                </a>
+            </div>
+        </header>
+        <!-- NAV MENU -->
+        <nav class="menu-nav">
+            <div id="menu">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="#">CALENDARIO</a></li>
+                    <li><a href="#">E-SHOP</a></li>
+                    <li><a href="#">FORO</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Header / nav -->
+        <!-- ================================== -->
+        <div class="card-product col-10">
+            <!-- Product -->
+            <div class="product-galeria">
+                <input type="radio" name="selection" value="imagen1" id="img_1" checked>
+                <input type="radio" name="selection" value="imagen2" id="img_2">
+                <input type="radio" name="selection" value="imagen3" id="img_3">
+                <input type="radio" name="selection" value="imagen4" id="img_4">
+                <img src="images/product-shop/product-1.webp">
+                <img src="images/product-shop/product-1.webp">
+                <img src="images/product-shop/product-1.webp">
+                <img src="images/product-shop/product-1.webp">
+            </div>
+
+            <!-- Product ends -->
+            <div class="container-data-product col-4">
+                <div class="product-data">
+                    <h2>Producto</h2>
+                    <h3>$39.99</h3>
+                </div>
+
+                <div id="description">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolore corrupti illum dolorum totam culpa
+                    necessitatibus quidem modi expedita repellendus quaerat porro minus, et magni hic aliquid
+                    exercitationem in. Molestias, necessitatibus!
+
+                    </p>
+                </div>
+                <div id="producto-categoria" class="mt-1 mb-0 text-muted small">
+                    <span>categoria 1</span>
+                    <span class="text-primary"> • </span>
+                    <span>categoria 2</span>
+                    <span class="text-primary"> • </span>
+                    <span> categoria 3<br /></span>
+                </div>
+
+                <br />
+                <div class="cart">
+                    Cantidad: &nbsp;
+                    <input type="number" placeholder="1" maxlength="3">&nbsp; &nbsp; &nbsp;
+                    <a href="/cart.html" >
+                        <button class="btn-add mt-3"> Añadir
+                          <div class="icon">
+                            <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M0 0h24v24H0z" fill="none"></path>
+                              <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                                fill="currentColor"></path>
+                            </svg>
+                          </div>
+                        </button>
+                      </a>
+                </div>
+            </div>
+        </div>
+        <!-- ====================================== -->
+        <!-- Footer -->
+        <!-- Footer -->
+        <footer>
+            <div class="container__footer">
+                <div class="box__footer">
+                    <div class="logo-footer">
+                        <img src="images/identidad/El-anzuelo-logo.png" alt="">
+                    </div>
+                    <div class="subscribe-footer">
+                        <div class="group-subs">
+                            <input type="email" class="input subscribe-footer__input" id="Email" name="Email"
+                                placeholder="Email" autocomplete="off">
+                            <input class="button--submit" value="Subscribite" type="submit">
+                        </div>
+                    </div>
+                </div>
+                <div class="box__footer">
+                    <h2>Soluciones</h2>
+                    <a href="https://www.google.com">App Desarrollo</a>
+                    <a href="#">App Marketing</a>
+                    <a href="#">IOS Desarrollo</a>
+                    <a href="#">Android Desarrollo</a>
+                </div>
+
+                <div class="box__footer">
+                    <h2>Compañia</h2>
+                    <a href="#">Acerca de</a>
+                    <a href="#">Trabajos</a>
+                    <a href="#">Procesos</a>
+                    <a href="#">Servicios</a>
+                </div>
+
+                <div class="box__footer">
+                    <h2>Redes Sociales</h2>
+                    <a href="#"> <i class="fab fa-facebook-square"></i> Facebook</a>
+                    <a href="#"><i class="fab fa-twitter-square"></i> Twitter</a>
+                    <a href="#"><i class="fab fa-linkedin"></i> Linkedin</a>
+                    <a href="#"><i class="fab fa-instagram-square"></i> Instagram</a>
+                </div>
+
+            </div>
+            <div class="box__copyright">
+                <hr>
+                <p></b>El anzuelo</p>
+            </div>
+        </footer>
+
+        <!-- Footer ends -->
+
+
+
+        <!-- Bootstrap -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+            crossorigin="anonymous"></script>
+        </div>
+        </div>
+    </body>
+
+    </html>
