--- a/product.html
+++ b/product.html
@@ -117,19 +117,24 @@
 
                 <br />
                 <div class="cart">
-                    Cantidad: &nbsp;
-                    <input type="number" placeholder="1" maxlength="3">&nbsp; &nbsp; &nbsp;
-                    <a href="/cart.html" >
-                        <button class="btn-add mt-3"> Añadir
-                          <div class="icon">
-                            <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                              <path d="M0 0h24v24H0z" fill="none"></path>
-                              <path d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
-                                fill="currentColor"></path>
-                            </svg>
-                          </div>
-                        </button>
-                      </a>
+                 <div class="product-cantidad">
+                    <label for="cantidad">
+                        Cantidad:
+                        <input class="product-cantidad" type="number" id="cantidad" placeholder="1" maxlength="3">
+                      </label>
+                 </div>
+                    <div class="producto-add-cart">
+                        <a href="/cart.html" >
+                            <button class="btn-add mt-3"> Añadir
+                              <div class="icon">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
+                                    <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zM9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0z"/>
+                                  </svg>
+                                </svg>
+                              </div>
+                            </button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
